# faster

./: .gitignore  .rosinstall  .rosinstall.bak  CMakeLists.txt  LICENSE  Readme.md  package.xml
DecompROS/decomp_test_node/: CMakeLists.txt  package.xml
DecompROS/decomp_test_node/data/: iss_obs.bag
DecompROS/decomp_test_node/launch/: test.rviz  test_path_decomp.launch  test_seed_decomp.launch
DecompROS/decomp_test_node/src/: test_seed_decomp.cpp  txt_reader.hpp
cvx/: .gitignore  CMakeLists.txt  FindGUROBI.cmake  README.md  gurobi.cpp  package.xml
cvx/launch/: cvx.launch
cvx/models/: all_times_5_meters_10_points.txt  times_log.txt  tune1.prm  tune2.prm
cvx/param/: cvx.yaml
cvx/src/: cvx.cpp  cvx.hpp  jps_manager.cpp  jps_manager.hpp  main.cpp  main_novale.cpp  old.cpp  read_map.hpp  solver_accel.h  termcolor.hpp  timer.hpp  utils.hpp
cvx/src/cvxgen/: Makefile  csolve.c  csolve.m  cvxgen_lib.c  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cvx/src/cvxgen_accel/: Makefile  csolve.c  csolve.m  make_csolve.m  solver.c  testsolver.c  util.c
cvx/src/solvers/: mlinterp.hpp  solverGurobi.cpp  solverGurobi.hpp  solverGurobi_utils.hpp  solvers.cpp  solvers.hpp
cvx/src/solvers/cvxgen/: solver_jerk.h
cvx/src/solvers/cvxgen_accel/: Makefile  csolve.c  cvxgen_lib.c  cvxsolve.m  description.cvxgen  exportmap.map  interface_accel.h  ldl.c  matrix_support.c  solver.c  util.c  (+1 more)
cvx/tests_old/: gurobi_continuous.cpp
faster/: .gitignore  CMakeLists.txt  FindGUROBI.cmake  gurobi_continuous.cpp  gurobi_discrete.cpp  package.xml
faster/include/: faster.hpp  faster_ros.hpp  faster_types.hpp  jps_manager.hpp  read_map.hpp  solverGurobi.hpp  solverGurobi_utils.hpp  timer.hpp  utils.hpp
faster/install/: faster.rosinstall  faster_ground_robot.rosinstall
faster/launch/: demo1.launch  fake_sim.launch  faster.launch  faster_fsm.launch  faster_interface.launch  ground_robot.launch  ground_robot_sim.launch  jackal.launch  perfect_tracker_and_sim.launch  spawn_quadrotor.launch  spawn_quadrotor_with_asus.launch
faster/models/: all_times_5_meters_5_points.txt  test_runtimes.py  times_log.txt  tune2.prm
faster/other/: gurobi_continuous.cpp  gurobi_discrete.cpp
faster/param/: faster.yaml
faster/rqt_cfgs/: demo_interface.perspective
faster/rviz_cfgs/: cvx_JA01.rviz  cvx_SQ01s.rviz
faster/scripts/: fake_sim.py  faster_commands.py  goal_odom_to_cmd_vel_state.py  perfect_tracker.py
faster/src/: debug.cpp  faster.cpp  faster.hpp  faster_ros.cpp  faster_ros.hpp  faster_types.hpp  jps_manager.cpp  jps_manager.hpp  main.cpp  read_map.hpp  solverGurobi.cpp  timer.hpp  utils.cpp  utils.hpp
faster/src/novale/: old.cpp  tests_deque.cpp
faster/src/solvers/: solverGurobi.cpp  solverGurobi.hpp  solverGurobi_utils.hpp  solvers.hpp
faster/urdf/: asus_camera.urdf.xacro  flir_a35_camera.urdf.xacro  generic_camera.urdf.xacro  generic_stereo_camera.urdf.xacro  generic_thermal_camera.urdf.xacro  generic_zoom_camera.urdf.xacro  hokuyo_utm30lx.urdf.xacro  kinect_camera.urdf.xacro  quadrotor.gazebo.xacro  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_downward_cam.gazebo.xacro  quadrotor_downward_cam.urdf.xacro  quadrotor_hokuyo_utm30lx.gazebo.xacro  quadrotor_hokuyo_utm30lx.urdf.xacro  quadrotor_with_asus.gazebo.xacro  quadrotor_with_asus.urdf.xacro  quadrotor_with_asus_with_hokuyo_utm30lx.gazebo.xacro  quadrotor_with_asus_with_hokuyo_utm30lx.urdf.xacro  quadrotor_with_cam.gazebo.xacro  quadrotor_with_cam.urdf.xacro  quadrotor_with_kinect.gazebo.xacro  quadrotor_with_kinect.urdf.xacro  realsense_camera.urdf.xacro  sonar_sensor.urdf.xacro  thermaleye_camera.urdf.xacro  window.urdf
faster/urdf/grass/: model-1_4.sdf
faster_msgs/: CMakeLists.txt  package.xml
faster_msgs/msg/: Mode.msg
mpl_ros/motion_primitive_library/: Doxyfile  README.md  package.xml
mpl_ros/motion_primitive_library/data/: corridor.yaml
mpl_ros/motion_primitive_library/docs/: classFace-members.html  classFace.html  classLambda.html  classLambdaSeg.html  classMPBaseUtil.html  classMPL_1_1GraphSearch.html  classMPL_1_1MapUtil-members.html  classMPL_1_1env__base.html  classMPL_1_1env__cloud.html  classMPL_1_1env__map-members.html  classMPMapUtil-members.html  classMPMapUtil.html  classMapReader-members.html  classPolySolver-members.html  classPolyTraj.html  classPrimitive.html  classPrimitive1D-members.html  classes.html  decomp__util_8h.html  decomp__util_8h_source.html  dir_5401eaddd0d21a6b5f9674a9044e02e8.html  dir_6020c1fe537679fc62c679a25e568419.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6549bedf82156dc06df95cefb015444e.html  dir_a573004c1aa1ac4f8bc48460229ea7de.html  env__base_8h.html  env__cloud_8h_source.html  env__map_8h_source.html  functions_b.html  functions_f.html  functions_h.html  functions_j.html  functions_k.html  functions_m.html  functions_r.html  functions_s.html  functions_t.html  functions_vars.html  functions_w.html  globals.html  (+25 more)
mpl_ros/motion_primitive_library/script/: optimal_acc_primitive.py  optimal_jerk_primitive.py
mpl_ros/motion_primitive_library/test/: timer.hpp
mpl_ros/mpl_test_node/: package.xml
mpl_ros/mpl_test_node/src/: test_primitive_cloud.cpp  test_primitive_replan.cpp
mpl_ros/planning_ros_msgs/: CMakeLists.txt  package.xml
mpl_ros/planning_ros_msgs/msg/: Arrows.msg  Log.msg  Path.msg  Primitive.msg  Primitives.msg  Trajectory.msg
tip/: CMakeLists.txt  package.xml
tip/include/: tip.hpp
tip/launch/: tip.launch
tip/msg/: TIP.msg
tip/param/: tip.yaml
tip/src/: collision-check.cpp  main.cpp  tip.cpp  utils.cpp
tip/src/debug/: test.cpp  test_pcl.cpp
upenn/DecompROS/DecompUtil/: CMakeLists.txt  Doxyfile  README.md  decomp_utilConfigVersion.cmake  package.xml
upenn/DecompROS/decomp_ros_msgs/: package.xml
upenn/DecompROS/decomp_test_node/: CMakeLists.txt
upenn/mpl_ros/motion_primitive_library/: CMakeLists.txt  motion_primitive_libraryConfig.cmake  wercker.yml
upenn/mpl_ros/mpl_test_node/: CMakeLists.txt
upenn/mpl_ros/planning_ros_utils/: CMakeLists.txt  package.xml
(+613 files in other folders)
