<?xml version="1.0"?>
<package>
  <name>faster</name>
  <version>0.0.0</version>
  <description>The faster package</description>

  <maintainer email="jtorde@mit.edu">Jesus Tordesillas Torres</maintainer>
  <author email="jtorde@mit.edu">Jesus Tordesillas Torres</author> 
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>jps3d</build_depend>
  <build_depend>jps3d</build_depend>

  <build_depend>snapstack_msgs</build_depend>
  <build_depend>snapstack_msgs</build_depend>

  <build_depend>decomp_util</build_depend>
  <build_depend>decomp_ros_utils</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
