<?xml version="1.0"?>
<package>
  <name>faster_msgs</name>
  <version>0.0.0</version>
  <description>The faster_msgs package</description>

  <maintainer email="jtorde@mit.edu">Jesus Tordesillas Torres</maintainer>
  <author email="jtorde@mit.edu">Jesus Tordesillas Torres</author> 
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>