<?xml version="1.0"?>
<package format="2">
  <name>decomp_test_node</name>
  <version>0.0.1</version>
  <description>The test_node package</description>
  <maintainer email="sikang@todo.todo">sikang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>decomp_util</depend>
  <depend>decomp_ros_utils</depend>

</package>

