<?xml version="1.0"?>
<package format="2">
  <name>planning_ros_msgs</name>
  <version>0.0.0</version>
  <description>The planning_ros_msgs package</description>

  <maintainer email="sikang@seas.upenn.edu">sikang</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
