<?xml version="1.0"?>
<package format="2">
  <name>planning_ros_utils</name>
  <version>0.0.0</version>
  <description>The planning_ros_utils package</description>

  <maintainer email="sikang@todo.todo">sikang</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>pcl_ros</depend>
  <depend>eigen_conversions</depend>
  <!--<depend>jps3d</depend>-->
  <depend>motion_primitive_library</depend>
  <depend>planning_ros_msgs</depend>
  <!--<depend>image_geometry</depend>-->
  <!--<depend>depth_image_proc</depend>-->
  <depend>tf_conversions</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
